# gazer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py  gaze_estimator.py  tracker.py
app/routes/: __init__.py  websocket_handlers.py
static/css/: eyetracking.css  style.css
static/js/: eyetracking.js
templates/: eyetracking.html  instructions.html
tests/: __init__.py  test_gaze_estimator.py
